Fix sort order of "no other" and "none"

This fixes a regression introduced by
44d16fef5aac0568b38db571e9cba2c7e46bba9e (natural sort order), causing
"no other" or "none" and their localized versions to be sorted with the
rest of the list items when natual sort order was active.

BUG: 476504