Browser/TreeFilter.cpp
@@ -5,6 +5,8 @@
 
 #include "TreeFilter.h"
 
+#include <Browser/enums.h>
+
 #include <QCollator>
 
 Browser::TreeFilter::TreeFilter(QObject *parent)
@@ -63,6 +65,12 @@ void Browser::TreeFilter::setNaturalSortOrder(bool naturalSortOrder)
 
 bool Browser::TreeFilter::lessThan(const QModelIndex &source_left, const QModelIndex &source_right) const
 {
+    const bool sortPriority_left = source_left.data(SortPriorityRole).toBool();
+    const bool sortPriority_right = source_right.data(SortPriorityRole).toBool();
+    // if only one item has priority, it gets prioritized above the other. Otherwise sort normally...
+    if (sortPriority_left xor sortPriority_right) {
+        return sortPriority_left;
+    }
     if (m_naturalSortOrder) {
         // numeric sort
         const QString &string_left = source_left.data(sortRole()).toString();
